# dm-backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  manage.py  openapi.yml  pyproject.toml  pytest.ini  sonar-project.properties  timeout_decorator-0.5.0-py3-none-any.whl  tox.ini
.github/workflows/: build.yml  lint.yml
dm_backend/: .env.example  __init__.py  asgi.py  docker-compose.yml  settings.py  urls.py  wsgi.py
dm_backend/enums/: __init__.py
dm_backend/migrations/: 0001_initial.py  0002_alter_equation_line_style.py  0003_graph_preview.py  0004_alter_equation_line_style.py  0005_alter_graph_owner.py  0006_alter_graph_options_remove_graph_unique_graph_name.py  __init__.py
dm_backend/models/: __init__.py  equation.py  graph.py  user.py
dm_backend/serializers/: user.py
dm_backend/services/: __init__.py
dm_backend/src/dataclasses/: __init__.py
dm_backend/src/enums/: line_style_type.py
dm_backend/src/models/: __init__.py  equation.py  graph.py
dm_backend/src/serializers/: __init__.py  equation.py  graph.py
dm_backend/src/services/: api_renderer.py
dm_backend/src/views/: equation.py  equation_parser.py  graph.py
dm_backend/tests/: __init__.py
dm_backend/tests/baker_recipes/: equation_baker_recipe.py  graph_baker_recipe.py  user_baker_recipe.py
dm_backend/tests/models/: test_equation.py  test_graph.py
dm_backend/tests/serializers/: test_equation.py  test_graph.py
dm_backend/tests/views/: test_equation.py  (+2 more)
dm_backend/views/: __init__.py  sign_up.py
docker/: build_docker.sh  run_docker.sh
