[tool.poetry]
name = "dm-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
pre-commit = "^3.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
